--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,3 +16,85 @@
 @import url('./badges.css');
 @import url('./back-link.css');
 @import url('./footer.css');
+
+.container{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+}
+
+.back-link{
+  width: 75px;
+}
+
+.input-text{
+  border-color: rgba(128, 128, 128, 1);
+  border-radius: 4px;
+  width: 272px;
+  height: 40px;
+}
+
+.button, .btn-submit{
+  background-color: rgba(78, 117, 255, 1);
+  border-radius: 8px;
+  border: none;
+  color: white;
+  height: 40px;
+}
+
+.button{
+  width: 75px;
+}
+
+.button:hover, .btn-submit:hover{
+  background-color: rgba(108, 140, 255, 1);
+}
+
+.button:disabled{
+  background-color: rgba(207, 207, 207, 1);
+  color: rgba(152, 152, 152, 1);
+}
+
+.timer{
+  display: flex;
+  gap: 10px;
+}
+
+.field{
+  display: flex;
+  flex-direction: column;
+  width: 61px;
+  height: 72px;
+}
+
+.value{
+  font-size: 40px;
+}
+
+.label{
+  font-size: 16px;
+}
+
+.form{
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  gap: 10px;
+  width: 360px;
+}
+
+.label-delay{
+  display: flex;
+  flex-direction: column;
+  align-items:flex-start;
+}
+
+.input-delay{
+  width: 360px;
+}
+
+.legend{
+  align-items: flex-start;
+}
